--- a/DescentApp/DescentApp/HeroPage.xaml
+++ b/DescentApp/DescentApp/HeroPage.xaml
@@ -4,11 +4,24 @@
              x:Class="DescentApp.HeroPage"
              Title="Hero Setup">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Main Hand"
-                VerticalOptions="Right"/>
-            <Picker Title="Main Hand" x:Name="mainHandPicker"
-                    SelectedIndexChanged="OnChangeMainHand"/>
+        <StackLayout Orientation="Vertical">
+            <StackLayout Orientation="Horizontal">
+                <Label VerticalOptions="Start"
+                       Text="Main Hand" />
+                <Picker VerticalOptions="End"
+                    SelectedIndex="{Binding mainHandItem.SelectedIndex}"
+                    ItemsSource="{Binding mainHandItem.ItemNames}"
+                        />
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal">
+                <Label VerticalOptions="Start"
+                       Text="Off Hand" />
+                <Picker VerticalOptions="End"
+                    SelectedIndex="{Binding offHandItem.SelectedIndex}"
+                    ItemsSource="{Binding offHandItem.Itemnames}" />
+            </StackLayout>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
