--- a/DescentApp/DescentApp/Views/HeroPage.xaml
+++ b/DescentApp/DescentApp/Views/HeroPage.xaml
@@ -45,7 +45,7 @@
                 </Picker>
             </StackLayout>
 
-                <!-- Trinket1--><!--
+            <!-- Trinket1-->
             <StackLayout Orientation="Horizontal">
                 <Label VerticalOptions="Start"
                        Text="Trinket 1" />
@@ -58,7 +58,7 @@
                 </Picker>
             </StackLayout>
 
-                --><!-- Trinket2--><!--
+            <!--Trinket2-->
             <StackLayout Orientation="Horizontal">
                 <Label VerticalOptions="Start"
                        Text="Trinket 2" />
@@ -69,7 +69,7 @@
                         <local:Trinket2ItemViewModel />
                     </Picker.BindingContext>
                 </Picker>
-            </StackLayout>-->
+            </StackLayout>
 
         </StackLayout>
     </ContentPage.Content>
